<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carinadossantospereira.shoppingnotebook.AddValueActivity">

    <include
        android:id="@+id/toolbar_aux"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="49dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivClienteSales"
        android:layout_width="99dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_aux"
        app:srcCompat="@drawable/ic_avatar"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tvNameCliSales"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivClienteSales"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_aux" />

    <TextView
        android:id="@+id/tvDateSales"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivClienteSales"
        app:layout_constraintTop_toBottomOf="@+id/tvNameCliSales" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/coin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/edValueSales"
        app:layout_constraintEnd_toStartOf="@+id/edValueSales" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="150dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="126dp"
        android:text="@string/hintCashTwo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClienteSales" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="150dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hintCashTree"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvLimitCreditSales"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvTotalSales"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <Button
        android:id="@+id/btnSaveSales"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBtnOrangeDark"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edValueSales" />

    <EditText
        android:id="@+id/edValueSales"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hintPurchaseValue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgValues" />

    <RadioGroup
        android:id="@+id/rgValues"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateSales">


        <RadioButton
            android:id="@+id/rbMais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/btnCoinSum"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/rbMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCoinDecrease"
            android:onClick="onRadioButtonClicked"
            />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
